--- a/src/copyright/copyright.css
+++ b/src/copyright/copyright.css
@@ -16,6 +16,9 @@ section {
   padding: 2rem 9%;
 }
 
+.body{
+  height: 100vh;
+}
 /* Container Styles */
 .container {
   position: relative;
@@ -285,8 +288,10 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 50px;
-
+  /* padding-top: 50px; */
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-bottom: -0px;
 }
 
 /* IP Section Styles */
@@ -308,7 +313,6 @@ h1 {
 /* Card Styles */
 .card {
   width: 400px;
-  height: 350px;
   display: inline-block;
   border-radius: 20px;
   margin-left: 550px;
@@ -335,9 +339,7 @@ button {
 .button-container {
   display: flex;
   gap: 1rem;
-  justify-content: flex-start;
-  
-
+  justify-content: center;
 }
 
 .button-container button {
