--- a/src/copyright/copyright.css
+++ b/src/copyright/copyright.css
@@ -2,62 +2,55 @@
   padding: 0;
   margin: 0;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-  transition: .2s linear;
-  scroll-behavior: smooth;
 }
 
-html {
-  scroll-behavior: smooth;
-  scroll-padding-top: 6rem;
-  overflow: visible;
+html, body {
+  overflow-x: hidden;
 }
 
-section {
-  padding: 2rem 9%;
-}
-
-.body {
-  height: 100vh;
-}
 
 /* Container Styles */
 .container {
-  position: relative;
   width: 100%;
   height: 100vh;
   background-image: url(../../images/homepage_bg.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  padding-left: 8%;
-  padding-right: 8%;
-  border-radius: 20px;
-  border-color: #000;
+  padding: 0 5%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
   box-sizing: border-box;
 }
 
-.blur {
-  background-color: rgba(192, 225, 242, 0.8);
-  /* Semi-transparent white */
-  padding: 150px;
-  border-radius: 10px;
-  backdrop-filter: blur(-10%);
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-  transform: translateY(70px);
-  height: 230px;
-  width: 150%;
-  margin-top: 8%;
-  transform: translateX(-40px);
+.cont{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
+.facts-container{
+  overflow: hidden;
+}
+.blur {
+  background-color: rgba(192, 225, 242, 0.8);
+  border-radius: 10px;
+  backdrop-filter: blur(5px);
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  height:65%;
+  padding: 2rem;
+}
 
 .row {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 90%;
-  width: 100%;
-  box-sizing: border-box;
+  /* align-items: center; */
+  /* justify-content: space-between; */
+  height: 80%;
+  width: 103%;
+  /* box-sizing: border-box; */
   border-color: #000;
 }
 
@@ -76,12 +69,13 @@ h1 {
 
 .col1 {
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  /* padding-top: 50px; */
-  padding-left: 50px;
-  padding-right: 50px;
-  padding-bottom: -0px;
+  /* align-items: center; */
+  /* flex-direction: column; */
+  /* align-items: flex-start; */
+  /* max-height: fit-content; */
+  /* height: 50px; */
+  padding-top: 170px;
+  padding-left: 60px;
 }
 
 /* IP Section Styles */
@@ -89,101 +83,99 @@ h1 {
   font-size: 3.5rem;
   text-align: left;
   /* Left align the title */
-  top: 10%;
-  margin-left: 30px;
+  left: 7%;
+  top: 15%;
+  transform: translateX(-1px);
+  
 }
 
-.ip-desc {
+/* .ip-desc {
   font-size: 1.3rem;
   text-align: justify;
-  transform: translateX(-155px);
+  transform: translateX(-120px);
   width: 500px;
-}
+} */
 
 /* Card Styles */
 .card {
-  width: 400px;
   display: inline-block;
   border-radius: 20px;
-  margin-left: 550px;
-  transform: translateY(-250px);
   box-sizing: border-box;
   cursor: default;
-  background-size: cover;
+  /* transform: translateX(-100px); */
+  /* transform: translateY(-100px); */
+  /* padding-top: -100px; */
+  padding-right: 60px; 
+  margin-top: -50px;
 }
 
 /* Button Hover Effects */
-button {
-  color: #ffffff;
-  font-size: 18px;
-  padding: 12px;
-  transition: transform 0.5s;
-  border: 0;
-  border-radius: 10px;
-  outline: none;
-  cursor: pointer;
-  background-color: rgb(130, 154, 218);
-}
-
-/* Add a flex container inside .blur for button alignment */
 .button-container {
-  display: flex;
-  gap: 1rem;
-  justify-content: center;
-}
-
-.button-container button {
-  width: auto;
-  /* Fit button to text */
-  margin: 0;
-  /* Remove extra margin */
-  padding: 0.8rem 1.6rem;
-}
-
-button a {
+  color: rgb(26, 51, 63);
   text-decoration: none;
-  color: #202160;
-  font-weight: bold
+  /* margin-right: 30px; */
+  padding: 10px;
+  box-sizing: border-box;
+  border-radius: 20px;
+  background-color: rgba(122, 199, 238, 0.8);
+  font-weight: bold;
+  position: relative;
+  display: flex;
 }
 
-button:hover {
-  transform: scale(1.15);
+.button-container:hover{
+  background-color: #99b1f4;
+
 }
 
-/* Sliding Facts Styles */
 /* Sliding Facts Styles */
 .sliding-facts {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 5px;
-  margin-bottom: 10px;
+  margin-bottom: 90px;
   font-size: x-large;
   color: #16163b;
 }
 
 .sliding-facts p {
-  margin: 0 50px;
-  line-height: normal;
-  font-size: 1.2rem;
+  margin-right:100px;
+  line-height: 34px;
+  font-size: 1.8rem;
   color: #151f6f;
   text-align: justify;
-  left: 6%;
-
+  transform: translateX(-40px);
+  /* margin-left: 0; */
 }
 
 /* Navigation Arrow Styles */
 
 .nav-arrow {
   cursor: pointer;
-  font-size: 2rem;
+  font-size: 2.5rem;
   color: #16163b;
   user-select: none;
   transition: color 0.3s;
-  transform: translateX(-150px);
+  transform: translateX(-50px);
 }
 
 .nav-arrow:hover {
-  color: #77bdd9;
+  background-color: #77bdd9;
 }
 
+.game-tags{
+  display: flex;
+  flex-direction: row;
+  margin-top: 0px;
+}
+
+.game-btn{
+  margin-left: 40px;
+  width: 150px;
+}
+.game-btn a{
+  justify-content: center;
+  font-size: 1.4rem;
+  padding: 14px;
+  border-radius: 15px;
+}
