--- a/src/games/Story/story.css
+++ b/src/games/Story/story.css
@@ -28,7 +28,7 @@ align-items: center;
 flex-direction: column;
 width: 100%;
 height: 100vh;
-background-image: url(../../images/homepage_bg.jpg);
+background-image: url(../../../images/homepage_bg.jpg);
 background-position: center;
 background-repeat: no-repeat;
 background-size: cover;
