--- a/src/homepage/homepage.css
+++ b/src/homepage/homepage.css
@@ -46,7 +46,7 @@ section {
   border-radius: 10px;
   backdrop-filter: blur(-10%);
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-  transform: translateY(70px);
+  transform: translateY(95px);
   height: 200px;
   width: 120%;
 }
@@ -89,7 +89,7 @@ p {
   height: 160px;
   position: absolute;
   /* top: 10% */
-  bottom: 47%;
+  bottom: 48%;
   right: 25%;
   display: inline-block;
   border-radius: 10px;
@@ -121,8 +121,8 @@ p {
   height: 160px;
   position: absolute;
   /* top: 10% */
-  bottom: 47%;
-  right: 8%;
+  bottom: 48%;
+  right: 10%;
   display: inline-block;
   border-radius: 10px;
   padding: 15px 25px;
@@ -153,7 +153,7 @@ p {
   height: 160px;
   position: absolute;
   /* top: 10% */
-  bottom: 17%;
+  bottom: 19%;
   right: 25%;
   display: inline-block;
   border-radius: 10px;
@@ -186,8 +186,8 @@ p {
   height: 160px;
   position: absolute;
   /* top: 10% */
-  bottom: 17%;
-  right: 8%;
+  bottom: 19%;
+  right: 10%;
   display: inline-block;
   border-radius: 10px;
   padding: 15px 25px;
@@ -233,13 +233,14 @@ h5 {
     font-size: 3.5rem;
     text-align: left; /* Left align the title */
     top: 10%;
+    transform: translateX(20px);
   }
   
   .ip-desc {
-    font-size: 2rem;
+    font-size: 1.8rem;
     text-align: justify;
-    transform: translateX(-82px);
-    
+    transform: translateX(-40px);
+    line-height: 40px;
   }
 
 
