--- a/src/games/logoquiz/logoGame.css
+++ b/src/games/logoquiz/logoGame.css
@@ -9,7 +9,7 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-image: url("2.jpg");
+    background-image: url("/images/bg-plane.png");
     background-blend-mode: darken;
     background-size: cover;
     background-repeat: no-repeat;
